# FundSight

./: .gitignore  DEV_STATUS.md  README.md
.github/workflows/: desktop-windows-release.yml
apps/desktop/: README.md
apps/desktop/app/: package-lock.json  package.json
apps/desktop/app/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/app/src-tauri/.cargo/: config.toml
apps/desktop/app/src-tauri/src/: agent.rs  lib.rs  main.rs
apps/mobile/: README.md
apps/web/: app.js  example.html  fund.css  fund.html  fund.js  index.html  package-lock.json  package.json  styles.css  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  styles.css  types.ts
apps/web/src/components/: AssistantPanel.tsx  ConfigPanel.tsx  FundLibraryPanel.tsx  HoldingsTable.tsx  ImportModal.tsx  StatCard.tsx
apps/web/src/lib/: api.ts  format.ts  fund-theme-modules.ts  storage.ts
docs/: architecture.md  realtime-holding-ai-feature.md  roadmap.md
services/analysis_api/: __init__.py  analytics.py  assistant.py  forecast_grader.py  holdings.py  intraday_estimator.py  models.py  name_display.py  ocr_import.py  plans_store.py  portfolio.py  predictions_store.py  real_data.py  research.py  sample_data.py  server.py  watchlist.py
services/analysis_api/tests/: test_analytics.py  test_assistant.py  test_forecast_grader.py  test_frontend_contract.py  test_holdings.py  test_ocr_import.py  test_portfolio.py  test_predictions_store.py  test_real_data_announcements.py  test_real_data_nav_trend.py  test_real_data_profile.py  test_real_data_search.py  test_research.py  test_server.py
services/analysis_api_rs/: Cargo.toml
services/analysis_api_rs/src/: announcements.rs  api.rs  assistant.rs  funds.rs  holdings.rs  html.rs  lib.rs  main.rs  metrics.rs  nav.rs  ocr_import.rs  portfolio.rs  real_data.rs  storage.rs  theme.rs  top_holdings.rs  watchlist.rs
